--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -93,7 +93,7 @@ could be characterised through clustering [@Kiselev2019].
 Alternatively, cell-to-cell expression heterogeneity can reflect gradual 
 changes along processes that evolve over time and that can be characterised 
 using pseudotime inference methods [@Saelens2019]. 
-The focus of this article is on more subtle expression variability that can 
+The focus of this article is on more subtle variability that can 
 occur within a seemingly homogeneous cell population. This variability can be 
 due to deterministic or stochastic events that regulate gene expression and,
 among others, has been reported to increase prior to cell phate decisions 
@@ -130,15 +130,15 @@ LVGs may relate to essential cellular functions and can assist the development
 of new data normalisation or integration strategies [@Lin2019]. 
 
 <!--- BASiCS downstream analyses between populations --->
-If the aim is to compare expression patterns between two or more pre-specified 
+In order to compare expression patterns between two or more pre-specified 
 groups of cells, `r Biocpkg("BASiCS")` provides a probabilistic decision rule to 
 perform differential expression analyses [@Vallejos2016; @Eling2018].
-Whilst several differential expression tools have been proposed in the context 
-of scRNA-seq (e.g. [@Kharchenko2014; @Finak2015]), some evidence suggests that 
+Whilst several differential expression tools have been proposed for scRNA-seq 
+data (e.g. [@Kharchenko2014; @Finak2015]), some evidence suggests that 
 these do not generally outperform popular bulk RNA-seq tools [@Soneson2018]. 
-Moreover, most of these methods are unable to uncover the complex 
-differential expression patterns (beyond changes in overall expression) that 
-can arise at the single cell level [@Lahnemann2020]. 
+Moreover, most of these methods are only designed to uncover changes in overall
+expression, ignoring the more complex patterns that can arise at the single cell 
+level [@Lahnemann2020]. 
 Instead, `r Biocpkg("BASiCS")` embraces the high granularity of scRNA-seq data,
 uncovering changes in cell-to-cell expression variability that are not 
 confounded by differences in technical noise or in overall expression. 
@@ -182,11 +182,11 @@ transcriptional changes during embryonic somitogenesis [@Ibarra-Soria2018].
 --->
 
 <!--- Brief outline + reproducibility ---> 
-In this manuscript, we briefly discuss the different sources of variability that 
-arise in scRNA-seq datasets and some of the strategies that have been 
-designed to control or attenuate technical noise in scRNA-seq protocols. 
+In this manuscript, we briefly discuss the sources of variability that arise in 
+scRNA-seq data and some of the strategies that have been designed to control or 
+attenuate technical noise in these assays. 
 We also summarise the main features of the Bioconductor packages that are used
-throughout this workflow, including a description for the underlying statistical 
+throughout this workflow and provide a description for the underlying statistical 
 model implemented in `r Biocpkg("BASiCS")`.
 This includes practical guidance to assess the convergence of the Markov Chain 
 Monte Carlo (MCMC) algorithm that is used to infer model parameters as well as 
@@ -303,49 +303,62 @@ these are not available for all scRNA-seq protocols [@Haque2017].
 
 # Methods {#methods}
 
+This step-by-step scRNA-seq analysis workflow is primarily based on the 
+Bioconductor package ecosystem [@Amezquita2019]. 
+A graphical overview for the workflow is provided in Figure \@ref(fig:overview) 
+and its main components are described below. 
 
-```{r overview, out.width='50%', fig.cap = 'Computational workflow highlighting the use of BASiCS to analyse single groups or two groups of cells. HVG: highly variable genes; LVG: lowly variable genes.', echo=FALSE, fig.pos='h'}
+```{r overview, out.width='50%', fig.cap = 'Graphical overview for the scRNA-seq analysis workflow described in this manuscript. Starting from a SingleCellExperiment object, we use the scater and scran Bioconductor packages to perform quality control and initial exploratory analyses. The primary focus of this workflow is to robustly quantify transcriptional heterogeneity within seemingly homogeneous cell populations. For this purpose, we apply the BASiCS Bioconductor package, illustrating how BASiCS can be used to analyse a single or multiple pre-specified groups of cells.', echo=FALSE, fig.pos='h'}
 knitr::include_graphics("figure/Overview.png")
 ```
 
-In this workflow, we use a number of Bioconductor and CRAN packages for 
-different parts of the analyses. Here, we will briefly highlight the main 
-functionalities of these packages from a user's perspective.
+## Input data - `SingleCellExperiment`
 
-The `r Biocpkg("SingleCellExperiment")` Bioconductor package offers an S4 
-class container to store scRNA-seq count data and their associated gene- and 
-cell-specific metadata. 
-Throughout this workflow, we perform analyses using a `SingleCellExperiment` 
-object that contains (at least) the raw expression counts, gene identifiers, 
-batch information and cell identifiers.
-The `SingleCellExperiment` package uses `r Biocpkg("SummarizedExperiment")`,
-a container used in many Bioconductor packages to contain tabular biological 
-data. The `SingleCellExperiment` function takes a list of assays taken
-of the samples, usually including the raw expression counts, and the cell- and 
-gene-specific metadata in the form of `data.frame`s.
+Here, we use the `r Biocpkg("SingleCellExperiment")` package to convert an input 
+matrix of raw read-counts (molecule counts for UMI-based protocols) into a 
+`SingleCellExperiment` object.
+Such object can be used to store scRNA-seq data and its associated metadata, 
+such as gene- and cell-specific information. 
+Moreover, when available, the same object can be used to store read-counts for 
+technical spike-in molecules (these can be accessed via the `altExp()` method).
+A major advantage of using a `SingleCellExperiment` object as the input for 
+scRNA-seq analyses is that it enables interoperability across a large number of 
+Bioconductor packages [@Amezquita2019]. 
 
+## Quality control and exploratory analyses - `scater` and `scran`
+
+An critical step in scRNA-seq analyses is to apply quality control (QC) 
+diagnostics, removing low quality samples (wells or droplets, depending on 
+the protocol) that may distort downstream analyses. 
+Among others, QC can help to identify samples that contain broken cells, that 
+are empty or that contain multiple cells [@Ilicic2016classification]. 
+Moreover, lowly expressed genes for which less reliable information is available 
+are typically also removed. 
+
+<!--- edited until here only
+removed comment about normalisation as we primarily use scran for that 
+add something about gene-level metrics --->
 The `r Biocpkg("scater")` Bioconductor package was developed to facilitate 
-the handling of scRNA-seq data [@McCarthy2017].
-Its main functions include the calculation of quality control (QC) metrics, 
-the visualisation of such metrics and expression counts, and the normalisation 
-of expression counts.
-We will primarily use the `calculateQCMetrics` function to calculate cell- 
-and gene-specific QC metrics, the `plotPCA` function to visualise QC 
-metrics, metadata, and gene expression, and the `logNormCounts` function to 
-normalise expression data.
+this process [@McCarthy2017].
+It can be used to calculate standard QC metrics (e.g. total reads per cell, 
+percentage of mitochondrial reads) and for data visualisation.  
+Here, we primarily use the `calculateQCMetrics` function to calculate cell- 
+and gene-specific QC metrics and the `plotPCA` function to visualise QC metrics, 
+exploring how these interact with available metadata. 
 
 The `r Biocpkg("scran")` Bioconductor package offers a variety of functions 
 for low-level scRNA-seq data analysis [@Lun2016].
 While it contains function for doublet detection, and estimation 
 of cell cycle states, we will use it primarily for normalisation in conjunction
 with the `scater` package [@Lun2016pooling], and for modelling the mean-variance 
-trend across all genes.
-The `trendVar` and `decomposeVar` functions will be used to fit a 
+trend across all genes. The `trendVar` and `decomposeVar` functions will be used to fit a 
 trend between the gene-specific variances and gene-specific mean expression,
 before decomposing the overall variance into technical and biological 
 components. Furthermore, we will use the `DM` function to calculate the distance
 of gene-specific squared coefficients of variation (CV^2) to a rolling median 
 along mean expression [@Kolodziejczyk2015cell].
+
+## Quantifying cell-to-cell transcriptional variability - `BASiCS`
 
 The `r Biocpkg("BASiCS")` Bioconductor package contains an assembly of 
 functions to estimate and analyse gene- and cell-specific model parameters 
@@ -428,6 +441,7 @@ convergence of MCMC chains. In particular, we will use
 `BASiCS_EffectiveSize` and `BASiCS_DiagPlot` to calculate and visualise the
 effective sample size generated by the MCMC samplers.
 
+## Other steps [title tbc]
 
 The `r Biocpkg("goseq")` Bioconductor package offers functions to detect the 
 enrichment of gene ontologies (GOs) among user-specified gene sets [@Young2010].
@@ -444,7 +458,6 @@ wide range of gene and gene product identifiers [@Durinck2005] by accessing the
 BioMart software suite ([http://www.biomart.org](http://www.biomart.org)).
 We can use `biomaRt` to link the **Mus musculus** gene IDs and to their gene 
 symbols (also referred to as 'gene name'): 
-
 
 ```{r libraries}
 library("ggplot2")
