--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -73,53 +73,58 @@ knitr::opts_chunk$set(
 )
 ```
 
+<!-- I simplified this section to avoid too much mathematical formulation.
+Readers can go to the original papers for more details.
+I think it is important to emphasise the intution/interpretation instead. -->
 ## Quantifying cell-to-cell transcriptional variability - `BASiCS`
 
-The `r Biocpkg("BASiCS")` Bioconductor package contains an assembly of 
-functions to estimate and analyse gene- and cell-specific model parameters 
-[@Vallejos2015BASiCS; @Vallejos2016; @Eling2018].
-`BASiCS` is build upon a hierarchical Baysian framework and as such samples 
-posterior distribution for each model parameter.
-In mathematical terms, the gene expression count $X_{ij}$ for gene $i$ in cell 
-$j$ is modelled as:
+The `r Biocpkg("BASiCS")` package implements a Bayesian hierarchical framework 
+which borrows information across all genes and cells to robustly quantify 
+transcriptional variability [@Vallejos2015BASiCS].
+Similar to the approach adopted in `r Biocpkg("scran")`, `r Biocpkg("BASiCS")` 
+infers cell-specific global scaling normalisation parameters. 
+However, instead of inferring these as a pre-processing step, 
+`r Biocpkg("BASiCS")` uses an integrated approach in which data normalisation 
+and downstream analyses are performed simultaneously --- whilst propagating 
+statistical uncertainty. 
+To quantify technical noise, the original implementation of 
+`r Biocpkg("BASiCS")` uses information from extrinsic spike-in molecules as 
+control features, but the model has been extended to address situations in which 
+spike-ins are not available [@Eling2018].
 
-$$
-\begin{aligned}
-X_{ij}|\mu_i,\nu_j&\sim{}\text{Poisson}(\nu_j\mu_i)\\
-\nu_j|s_j,\theta&\sim{}\text{Gamma}(1/\theta,1/(s_j\theta))\\
-\rho_{ij}|\delta_i&\sim{}\text{Gamma}(1/\delta_i,1/\delta_i)
-\end{aligned}
-$$
+`r Biocpkg("BASiCS")` summarises the distribution of gene expression through 
+gene-specific *mean* ($\mu_i$) and *over-dispersion* ($\delta_i$) parameters. 
+Mean parameters $\mu_i$ quantify the overall expression for each gene $i$
+across the population of cells under study.
+Instead, $\delta_i$ captures the excess of variability that is observed with 
+respect to what would be expected in a homogeneous cell population, after taking 
+into account technical noise. 
+These are used as a proxy to quantify transcriptional variability.
+Moreover, to account for the strong association that is typically observed 
+between mean expression and over-dispersion estimates, we recently introduced 
+gene-specific *residual over-dispersion* parameters $\epsilon_i$ [@Eling2018]. 
+Similar to DM values implemented in `r Biocpkg("scran")`, these are defined as 
+deviations with respect to an overall regression trend that captures the 
+relationship between mean and over-dispersion values.
 
-where $\mu_i$ explains the gene's mean expression, $\nu_j$ the technical effect 
-characterised by the mRNA capture efficiency $s_j$ and the unexplained technical
-noise parameter $\theta$. 
-<!-- Here, $\phi_j$ is the cell-specifc size factor and  -->
-Here, $\rho_{ij}$ the biological 
-random effect fluctuating around the gene-specific over-dispersion 
-hyper-parameter $\delta_i$.
-It is important to note that, in further analyses, $\mu_i$ represents the
-mean expression and $\delta_i$ the biological over-dispersion of each gene.
+Parameter estimation is performed using an adaptive Metropolis within Gibbs
+algorithm [@Roberts2009].
+This is implemented in the `BASiCS_MCMC` function, which can be run using four 
+different major settings (see Table 1). 
+If spike-in molecules and the user sets `WithSpikes = TRUE` (default), the
+model uses this information in order to infer technical noise.
+Alternatively, if `WithSpikes = FALSE` [TEXT TBC].
+We recommend users to select `Regression = TRUE` as a default option, as it
+[TEXT TBC].
 
-Due to a strong association between mean expression and biological 
-over-dispersion, the model has been extended to correct for such confounding 
-effect. To this end, the prior distribution for the over-dispersion parameters 
-has been changed to:
+<!---
+If the regression between over-dispersion and mean expression should be 
+performed, the `Regression` parameters is set to `TRUE` (default).
+If the user decides to set `Regression = FALSE`, `BASiCS` will not estimate 
+the regression trend, and will not supply the residual over-dispersion 
+parameters $\epsilon_i$. ---> 
 
-$$
-\delta_i | \mu_i \sim \text{log-t}_{\eta}\left( \text{f}(\mu_i), \sigma^2 \right).
-$$
-
-where $\text{f}(\mu_i)$ describes a smooth regression trend between the 
-over-dispersion and the mean expression parameters.
-This extension introduced the residual over-dispersion parameters 
-$\epsilon_i=\delta_i-\text{f}(\mu_i)$ that do not scale with mean expression
-[@Eling2018].
-
-From a data analysis perspective, the `BASiCS_MCMC` function is the heart of 
-the `BASiCS` package, and can be run in four different settings (see Table 1). 
-
-: Four settings that can be used to run the `BASiCS_MCMC` function.
+: Four settings available for the the `BASiCS_MCMC` function.
 
                         No regression         Regression           
 ----------------------- --------------------  -------------------
@@ -128,14 +133,6 @@ Using spike-in reads    `WithSpikes = TRUE`   `WithSpikes = TRUE`
 No spike-ins available  `WithSpikes = FALSE`  `WithSpikes = FALSE` 
                         `Regression = FALSE`  `Regression = TRUE`
 ----------------------- --------------------  -------------------
-
-If spike-in counts are availabe and should be used to estimate technical noise,
-the parameter `WithSpikes` is set to `TRUE` (default).
-If the regression between over-dispersion and mean expression should be 
-performed, the `Regression` parameters is set to `TRUE` (default).
-If the user decides to set `Regression = FALSE`, `BASiCS` will not estimate 
-the regression trend, and will not supply the residual over-dispersion 
-parameters $\epsilon_i$.
 
 The `BASiCS_MCMC` function returns a `BASiCS_Chain` object, which can be used 
 for further downstream analyses, many of which are detailed in this workflow.
@@ -155,6 +152,10 @@ function. `BASiCS` also offers a number of functions to visualise and assess the
 convergence of MCMC chains. In particular, we will use 
 `BASiCS_EffectiveSize` and `BASiCS_DiagPlot` to calculate and visualise the
 effective sample size generated by the MCMC samplers.
+
+[talk about downstream analyses; hvg/lvg; differential testing 
+then mention the ability to perform differential testing;
+finally the extention to account for mean/over-dispersion]
 
 ## Other steps [title tbc]
 
