Remove dockerfile & update instructions. Also some refs

--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1185,3 +1185,17 @@ year = {2015}
   language = {en},
   number = {1}
 }
+@article{Roberts2009,
+  title = {Examples of {{Adaptive MCMC}}},
+  author = {Roberts, Gareth O. and Rosenthal, Jeffrey S.},
+  year = {2009},
+  month = jan,
+  volume = {18},
+  pages = {349--367},
+  issn = {1061-8600, 1537-2715},
+  doi = {10.1198/jcgs.2009.06134},
+  file = {/home/alan/Zotero/storage/SUSDK726/Roberts and Rosenthal - 2009 - Examples of Adaptive MCMC.pdf},
+  journal = {Journal of Computational and Graphical Statistics},
+  language = {en},
+  number = {2}
+}
